overlays/dev/toy-be-home-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toy-be-home
  namespace: default
  labels:
    env: dev
spec:
  selector:
    matchLabels:
      app: toy-be-home
  template:
    metadata:
      labels:
        app: toy-be-home
