overlays/dev/toy-backend-service-patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: toy-backend-home
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: '/'
  labels:
    env: dev
spec:
  selector:
    app: toy-be-home
  type: NodePort
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: toy-backend-auth
#   annotations:
#     alb.ingress.kubernetes.io/healthcheck-path: '/'
#   labels:
#     env: dev
# spec:
#   selector:
#     app: toy-be-auth
#   type: NodePort
#   ports:
#     - protocol: TCP
#       port: 8002
#       targetPort: 8002
